--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "meet-mind-ai",
+  "name": "meet-mind",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,9 +11,9 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
-    "@dicebear/collection": "^9.2.4",
-    "@dicebear/core": "^9.2.4",
-    "@hookform/resolvers": "^5.2.1",
+    "@dicebear/collection": "^9.2.3",
+    "@dicebear/core": "^9.2.3",
+    "@hookform/resolvers": "^5.1.1",
     "@neondatabase/serverless": "^1.0.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -53,21 +53,22 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
-    "drizzle-orm": "^0.43.1",
+    "drizzle-orm": "^0.43.0",
     "embla-carousel-react": "^8.6.0",
+    "humanize-duration": "^3.33.0",
     "input-otp": "^1.4.2",
-    "lucide-react": "^0.534.0",
+    "lucide-react": "^0.525.0",
     "nanoid": "^5.1.5",
-    "next": "15.3.3",
+    "next": "15.3.2",
     "next-themes": "^0.4.6",
     "nuqs": "^2.4.3",
     "react": "^19.0.0",
-    "react-day-picker": "^9.8.1",
+    "react-day-picker": "^9.8.0",
     "react-dom": "^19.0.0",
     "react-error-boundary": "^6.0.0",
-    "react-hook-form": "^7.61.1",
+    "react-hook-form": "^7.61.0",
     "react-icons": "^5.5.0",
-    "react-resizable-panels": "^3.0.4",
+    "react-resizable-panels": "^3.0.3",
     "recharts": "^2.15.4",
     "server-only": "^0.0.1",
     "sonner": "^2.0.6",
@@ -76,17 +77,19 @@
     "zod": "^3.25.7"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.0",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/humanize-duration": "^3.27.4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "drizzle-kit": "^0.31.1",
+    "drizzle-kit": "0.31.1",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "tailwindcss": "^4",
-    "tsx": "^4.19.4",
-    "tw-animate-css": "^1.3.6",
+    "tsx": "4.19.4",
+    "tw-animate-css": "^1.3.5",
     "typescript": "^5"
   }
 }
